--- a/index.html
+++ b/index.html
@@ -1,12 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Currículo - Larissa Guilger</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Currículo - Larissa Guilger</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+  <link rel="stylesheet" type="text/css" href="css/stylesheet.css">
 </head>
 <body>
-    <h1>Hello World!!</h1>
+  <header class="container-fluid">
+    <h2 class="nome-header">
+      Larissa Guilger
+    </h2>
+    <h3 class="cargo-header">
+      Desenvolvedora Front-End
+    </h3>
+  </header>
+  <main class="container">
+    <div class="goal">
+      <h3>Objetivo</h3>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec nec sapien eget lacus semper ullamcorper. Maecenas vel nisl consectetur ante varius ultrices ultrices et nulla. Nam rhoncus purus augue, ac dignissim arcu euismod non. Nunc ornare orci dolor, quis ultrices mi sodales ac. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce interdum justo tellus, nec blandit augue iaculis sed. Integer nisl nibh, tincidunt at vestibulum suscipit, imperdiet non tortor. 
+      </p>
+    </div>
+    <div>
+      <h3>Experiência</h3>
+      <div class="exp-div">
+        <h4>SoftWrap(09/2018 - Atual)</h4>
+        <p class="role">Desenvolvedora Front-end jr.</p>
+        <p>
+          Desenvolvimento de sites usando React, Electron, Vue, Bootstrap e outras ferramentas.       
+        </p>
+      </div>
+      <div class="exp-div">
+        <h4>Ecostage (08/2018 - 09/2018)</h4>
+        <p class="role">Desenvolvedora Front-end jr.</p>
+        <p>
+          Desenvolvimento de sites usando React, amcharts, material components, e outras ferramentas.
+        </p>
+      </div>
+      <div class="exp-div">
+        <h4>WeMind (02/2018 - 08/2018)</h4>
+        <p class="role">Desenvolvedora Front-end jr.</p>
+        <p>
+          Desenvolvimento de sites usando primariamente jquery, javascript, sass, scss e bootstrap. Além disso experiência com react, design, QA e documentação de front-end e back-end. 
+        </p>
+      </div>
+    </div>
+    <div>
+      <h3>Formação</h3>
+      <div class="edu">
+        <h5>IFSP - Instituto Federal de São Paulo</h5>
+        <p>
+          Análise e desenvolvimento de sistemas — <span>iniciado em fevereiro/2019</span>
+        </p>
+      </div>
+      <div class="edu">
+        <h5>SAGA School of arts games and animation</h5>
+        <p>
+          Curso de Desenvolvimento, Design e Arte digital voltado para jogos — 
+          <span>concluído em agosto/2015</span>
+        </p>
+      </div>
+      <div class="edu">
+        <h5>ETEC - Programação de Jogos Digitais</h5>
+        <p>
+          Curso técnico com ênfase em programação (duração de 2 anos) — 
+          <span>trancado em junho/2015</span>
+        </p>
+      </div>
+    </div>
+  </main>
+  <footer>
+    <p>lariguilger@hotmail.com</p>
+    <p><a href="https://www.linkedin.com/in/larissa-g-84b45bb8">Linkedin</a></p>
+  </footer>
 </body>
 </html>
