--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
   </header>
   <main class="container">
     <div class="goal">
-      <h3>Objetivo</h3>
+      <h3>Resumo</h3>
       <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec nec sapien eget lacus semper ullamcorper. Maecenas vel nisl consectetur ante varius ultrices ultrices et nulla. Nam rhoncus purus augue, ac dignissim arcu euismod non. Nunc ornare orci dolor, quis ultrices mi sodales ac. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce interdum justo tellus, nec blandit augue iaculis sed. Integer nisl nibh, tincidunt at vestibulum suscipit, imperdiet non tortor. 
+        Sou uma desenvolvedora front-end com muita disposição para aprender coisas novas. Conto com experiência usando diversas ferramentas e frameworks, como React, React Native, vue, jQuery, entre outras. Além disso tenho também conhecimentos em design, documentação e QA.
       </p>
     </div>
     <div>
